<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/logo"/>

        <androidx.cardview.widget.CardView
            android:layout_margin="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="8dp"
            android:background="#fff">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_form_title"
                    android:textSize="36sp"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal" />

                <EditText
                    android:id="@+id/firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textSize="25sp"
                    android:padding="10dp"
                    android:hint="@string/sign_in_form_first_name"
                    android:textColor="@color/white"
                    android:background="@color/reply_orange"
                    android:inputType="text"/>

                <EditText
                    android:id="@+id/lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textSize="25sp"
                    android:padding="10dp"
                    android:hint="@string/sign_in_form_last_name"
                    android:textColor="@color/white"
                    android:background="@color/reply_orange"
                    android:inputType="text"/>

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textSize="25sp"
                    android:padding="10dp"
                    android:hint="@string/sign_in_form_email"
                    android:textColor="@color/white"
                    android:background="@color/reply_orange"
                    android:inputType="textEmailAddress"/>

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textSize="25sp"
                    android:padding="10dp"
                    android:hint="@string/sign_in_form_username"
                    android:textColor="@color/white"
                    android:background="@color/reply_orange"
                    android:inputType="text"
                    app:counterEnabled="true"
                    app:counterMaxLength="15"/>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textSize="25sp"
                    android:padding="10dp"
                    android:hint="@string/sign_in_form_password"
                    android:textColor="@color/white"
                    android:background="@color/reply_orange"
                    android:inputType="textPassword"/>

                <EditText
                    android:id="@+id/country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textSize="25sp"
                    android:padding="10dp"
                    android:hint="@string/sign_in_form_country"
                    android:textColor="@color/white"
                    android:background="@color/reply_orange"
                    android:inputType="text"/>

                <CheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/reply_blue"
                    android:text="@string/terms_and_conditions"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/sign_inButton"
                    android:text="@string/sign_in_form_sign_in"
                    android:textSize="22sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/sign_loginButton"
                    android:text="@string/sign_in_form_login"
                    android:textSize="20sp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>