<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/logo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_form_title"
            android:textSize="36sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal" />

        <androidx.cardview.widget.CardView
            android:layout_margin="40dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="8dp"
            android:outlineSpotShadowColor="@color/black"
            android:background="#fff">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/white"
                    android:background="@color/reply_orange"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textSize="25sp"
                    android:hint="@string/login_form_email"/>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:padding="10dp"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/white"
                    android:layout_marginBottom="10dp"
                    android:background="@color/reply_orange"
                    android:textColor="@color/white"
                    android:inputType="textPassword"
                    android:hint="@string/sign_in_form_password"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/checkbox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Remember Me"
                            android:textStyle="bold"
                            android:textColor="@color/reply_orange"/>

                        <TextView
                            android:id="@+id/forgot"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Forgot Password?"
                            android:layout_marginBottom="10dp"
                            android:textStyle="bold"
                            android:textColor="@color/reply_orange"/>

                    </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/loginButton"
                    android:text="@string/login_form_login"
                    android:textSize="22sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/login_signButton"
                    android:text="@string/login_form_signin"
                    android:textStyle="bold"
                    android:textSize="22sp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>