<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".Dashboard">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/reply_orange"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dsb"
                android:layout_marginTop="30dp"
                android:textSize="40sp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"/>

            <LinearLayout
                android:orientation="horizontal"
                android:padding="16dp"
                android:gravity="left"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/call"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>
                <TextView
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:text="@string/call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:padding="16dp"
                android:gravity="left"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/email"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>
                <TextView
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:text="@string/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

        <GridLayout
            android:layout_marginTop="30dp"
            android:columnCount="1"
            android:rowCount="3"
            android:requiresFadingEdge="horizontal"
            android:fadingEdge="vertical"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="15dp"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="1dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:src="@drawable/services"
                        android:layout_width="40dp"
                        android:layout_height="40dp"/>
                    <TextView
                        android:layout_marginTop="12dp"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:text="@string/serve"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="15dp"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="1dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:src="@drawable/reserve"
                        android:layout_width="40dp"
                        android:layout_height="40dp"/>
                    <TextView
                        android:layout_marginTop="12dp"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:text="@string/reserve"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="15dp"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="1dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:src="@drawable/booking"
                        android:layout_width="40dp"
                        android:layout_height="40dp"/>
                    <TextView
                        android:layout_marginTop="12dp"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:text="@string/book"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="15dp"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="1dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:src="@drawable/location"
                        android:layout_width="40dp"
                        android:layout_height="40dp"/>
                    <TextView
                        android:layout_marginTop="12dp"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:text="@string/location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </GridLayout>

        <Button
            android:id="@+id/logout_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/dsb1"
            android:background="@color/black"
            android:textSize="30sp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp" />

    </LinearLayout>

</ScrollView>
